--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 <title>Web Page Design</title>
 </head>
 <body>
- Web Page Design
-The Idea
-Okay, so you have an idea for a website or an assignment due for Business Web Technologies.
-You want to make it look professional and easy to use.</p>
-What is the first thing you need to work on?
-Content
-Content is the most important element of a website. Written content, makes up for
-more than 90% of the Web
-The aim of design is to enhance the presentation of the content! Styling content
-will go a long way.
-</body>
+    <h1> Web Page Design <h1>
+
+    <h2>The Idea </h2>
+        Okay, so you have an idea for a website or an assignment due for Business Web Technologies.
+        You want to make it look professional and easy to use.</p>
+        What is the first thing you need to work on?
+        Content
+        Content is the most important element of a website. Written content, makes up for
+        more than 90% of the Web
+        The aim of design is to enhance the presentation of the content! Styling content
+        will go a long way.
+    </body>
 </html>
+
