--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h2>Content</h2>
 
-    <p> Content is the most important element of a website. Written content, makes up for
+    <p> Content is the most <strong>important</strong> element of a website. Written content, makes up for
     more than 90% of the Web</p>
     <p style="color:red">The aim of design is to enhance the presentation of the content! Styling content
     will go a long way.</p>
