--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
     <h2>The Idea</h2>
 
     <p>Okay, so you have an idea for a website or an assignment due for Business Web Technologies.
-    You want to make it look professional and easy to use.</p>
+    You want to make it look <em>professional</em> and easy to use.</p>
     <p>What is the first thing you need to work on?</p>
 
     <h2>Content</h2>
 
     <p> Content is the most <strong>important</strong> element of a website. Written content, makes up for
     more than 90% of the Web</p>
+
     <p style="color:red">The aim of design is to enhance the presentation of the content! Styling content
     will go a long way.</p>
+
+    <img
+    src=“https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5
+    _logo_and_wordmark.svg” width=“200” alt=“HTML5 Logo with
+    arms” />
 
 </body>
 </html>
