--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Web Page Design</title>
 </head>
 <body>
+    <header>
     <h1 style="color:blue;text-align:center">Web Page Design</h1>
     <h2>The Idea</h2>
 
@@ -23,6 +24,8 @@
     <img
     src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" width="200" alt="HTML5 Logo with
     arms" />
+
+    <Footer>
 
 </body>
 </html>
