--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
     src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" width="200" alt="HTML5 Logo with
     arms" />
 
-    <Footer>
-
+    <fotter>
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+            <img alt="Creative Commons License" style=“border-width:0"
+                src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+                
+                <br />This work is licensed under a <a rel="license"
+                href="http://creativecommons.org/licenses/by/4.0/">
+                Creative Commons Attribution 4.0 International License
+                </a>.
+        </footer>
 </body>
 </html>
