--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset=UTF-8">
+<meta charset="UTF-8">
 <title>Web Page Design</title>
+
 </head>
 <body>
     <header>
