--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
     <h1 style="color:blue;text-align:center">Web Page Design</h1>
+    </header>
     <h2>The Idea</h2>
 
     <p>Okay, so you have an idea for a website or an assignment due for Business Web Technologies.
